# theta-india

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  JIP_INDIA_MASTER_BUILD_SPEC.md  SCORING_METHODOLOGY.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql
.github/workflows/: ci.yml  deploy.yml
deploy/: setup.sh
deploy/nginx/: jip-india.conf
deploy/systemd/: jip-india.service
india_alpha/: config.py  cost_tracker.py  db.py
india_alpha/api/: __init__.py  models.py  routes.py
india_alpha/data/: policy_registry.json  superstar_investors.json
india_alpha/fetchers/: bse_insider.py  bse_shareholding_fetcher.py  concall_fetcher.py  nse_bulk_deals_fetcher.py  nse_filings_fetcher.py  nse_insider_fetcher.py  nse_shareholding_fetcher.py  screener_enricher.py  screener_fetcher.py  universe_builder.py
india_alpha/processing/: gem_scorer.py
india_alpha/signals/: concall_scorer.py  corporate_intelligence_scorer.py  degradation_monitor.py  operating_leverage.py  policy_scorer.py  promoter_scorer.py  quality_scorer.py  smart_money_scorer.py  valuation_scorer.py
scripts/: check_coverage.py  run_pipeline.py  test_connection.py
tests/: conftest.py  test_api.py  test_scoring.py
